[Fix] Dto 변경 및 코드 수정